force-app/main/default/objects/GarageCertification__c/GarageCertification__c.object-meta.xml
<CustomObject>
    <label>車庫証明</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>車庫証明名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>