force-app/main/default/objects/GarageCertification__c/fields/AcceptanceFormat__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFormat__c</fullName>
    <label>承諾書フォーマット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>