force-app/main/default/objects/GarageCertification__c/fields/ArrivalMonth__c.field-meta.xml
<CustomField>
    <fullName>ArrivalMonth__c</fullName>
    <label>到着月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>