force-app/main/default/objects/GarageCertification__c/fields/BeforehandContact__c.field-meta.xml
<CustomField>
    <fullName>BeforehandContact__c</fullName>
    <label>事前連絡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>