force-app/main/default/objects/GarageCertification__c/fields/BorrowerCorporation__c.field-meta.xml
<CustomField>
    <fullName>BorrowerCorporation__c</fullName>
    <formula>RealEstate__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>借主法人</label>
    <type>Text</type>
</CustomField>