force-app/main/default/objects/GarageCertification__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <label>車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>