force-app/main/default/objects/GarageCertification__c/fields/ChargesAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargesAmount__c</fullName>
    <label>（不要）手数料金額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>