force-app/main/default/objects/GarageCertification__c/fields/ChargesPayment__c.field-meta.xml
<CustomField>
    <fullName>ChargesPayment__c</fullName>
    <label>（不要）手数料支払</label>
    <length>255</length>
    <type>Text</type>
</CustomField>