force-app/main/default/objects/GarageCertification__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <label>完了理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>