force-app/main/default/objects/GarageCertification__c/fields/CompanyRule__c.field-meta.xml
<CustomField>
    <fullName>CompanyRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業ルール</label>
    <referenceTo>ServiceContractRenewalConditionChange__c</referenceTo>
    <relationshipLabel>車庫証明</relationshipLabel>
    <relationshipName>GarageCertificationServiceContractCancel</relationshipName>
    <type>Lookup</type>
</CustomField>