force-app/main/default/objects/GarageCertification__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>完了</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>