force-app/main/default/objects/GarageCertification__c/fields/CompletedMonth__c.field-meta.xml
<CustomField>
    <fullName>CompletedMonth__c</fullName>
    <label>完了月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>