force-app/main/default/objects/GarageCertification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅利用者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>車庫証明</relationshipLabel>
    <relationshipName>ContactGarageCertification</relationshipName>
    <type>Lookup</type>
</CustomField>