force-app/main/default/objects/GarageCertification__c/fields/ContactPossibleDate__c.field-meta.xml
<CustomField>
    <fullName>ContactPossibleDate__c</fullName>
    <label>管理へ連絡可能日</label>
    <type>Date</type>
</CustomField>