force-app/main/default/objects/GarageCertification__c/fields/CostOccurrenceIs__c.field-meta.xml
<CustomField>
    <fullName>CostOccurrenceIs__c</fullName>
    <label>費用発生有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>