force-app/main/default/objects/GarageCertification__c/fields/CounterGarageCertification__c.field-meta.xml
<CustomField>
    <fullName>CounterGarageCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車庫証明窓口</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>車庫証明 (車庫証明窓口)</relationshipLabel>
    <relationshipName>AccountGarageCertificationCounter</relationshipName>
    <type>Lookup</type>
</CustomField>