force-app/main/default/objects/GarageCertification__c/fields/CounterStaff__c.field-meta.xml
<CustomField>
    <fullName>CounterStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>窓口担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>車庫証明 (窓口担当者)</relationshipLabel>
    <relationshipName>RelationGarageCertificationContact</relationshipName>
    <type>Lookup</type>
</CustomField>