force-app/main/default/objects/GarageCertification__c/fields/DealerAdress__c.field-meta.xml
<CustomField>
    <fullName>DealerAdress__c</fullName>
    <label>ディーラー・行政書士住所</label>
    <type>TextArea</type>
</CustomField>