force-app/main/default/objects/GarageCertification__c/fields/DealerContactDestination__c.field-meta.xml
<CustomField>
    <fullName>DealerContactDestination__c</fullName>
    <label>ディーラー・行政書士連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>