force-app/main/default/objects/GarageCertification__c/fields/DecisionApplication__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication__c</fullName>
    <label>決裁申請</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNT決裁</fullName>
            </value>
            <value>
                <fullName>企業決裁</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>