force-app/main/default/objects/GarageCertification__c/fields/DecisionType__c.field-meta.xml
<CustomField>
    <fullName>DecisionType__c</fullName>
    <label>決裁種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionType</valueSetName>
    </valueSet>
</CustomField>