force-app/main/default/objects/GarageCertification__c/fields/DeliveryDesiredDateAbbott__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDesiredDateAbbott__c</fullName>
    <label>納車希望日_アボット</label>
    <type>Date</type>
</CustomField>