force-app/main/default/objects/GarageCertification__c/fields/delPrepaymentTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>delPrepaymentTaxCategory__c</fullName>
    <label>（不要）翌月以降前納合計額税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>