force-app/main/default/objects/GarageCertification__c/fields/DocumentArrivalDeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentArrivalDeadlineDate__c</fullName>
    <label>書類到着締切日</label>
    <type>Date</type>
</CustomField>