force-app/main/default/objects/GarageCertification__c/fields/DocumentIssueDueDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentIssueDueDate__c</fullName>
    <label>発行期日</label>
    <type>Date</type>
</CustomField>