force-app/main/default/objects/GarageCertification__c/fields/EmployeeAdress__c.field-meta.xml
<CustomField>
    <fullName>EmployeeAdress__c</fullName>
    <label>社員住所</label>
    <type>TextArea</type>
</CustomField>