force-app/main/default/objects/GarageCertification__c/fields/GarageCertificationArrivalScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificationArrivalScheduledDate__c</fullName>
    <label>車庫証明到着予定日</label>
    <type>Date</type>
</CustomField>