force-app/main/default/objects/GarageCertification__c/fields/GarageCertificationCounterEmail__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificationCounterEmail__c</fullName>
    <label>車庫証明窓口_メール</label>
    <type>Email</type>
</CustomField>