force-app/main/default/objects/GarageCertification__c/fields/GarageCertificationCounterPhoneNum__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificationCounterPhoneNum__c</fullName>
    <label>車庫証明窓口_電話番号</label>
    <type>Phone</type>
</CustomField>