force-app/main/default/objects/GarageCertification__c/fields/GarageZipCode__c.field-meta.xml
<CustomField>
    <fullName>GarageZipCode__c</fullName>
    <formula>RealEstate__r.ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>駐車場郵便番号</label>
    <type>Text</type>
</CustomField>