force-app/main/default/objects/GarageCertification__c/fields/IsLocationMap__c.field-meta.xml
<CustomField>
    <fullName>IsLocationMap__c</fullName>
    <label>所在図のご用意可否</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>