force-app/main/default/objects/GarageCertification__c/fields/IssueCharges__c.field-meta.xml
<CustomField>
    <fullName>IssueCharges__c</fullName>
    <label>発行手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>