force-app/main/default/objects/GarageCertification__c/fields/LeaseExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>LeaseExpiryDate__c</fullName>
    <label>リース満了日</label>
    <type>Date</type>
</CustomField>