force-app/main/default/objects/GarageCertification__c/fields/ManagementCompany__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>管理会社</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>車庫証明 (管理会社)</relationshipLabel>
    <relationshipName>GarageCertificationManagementCompany</relationshipName>
    <type>Lookup</type>
</CustomField>