force-app/main/default/objects/GarageCertification__c/fields/ManagementCompanyAdress__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyAdress__c</fullName>
    <formula>ManagementCompanyName__r.BillingStreet &amp; BR() &amp;
ManagementCompanyName__r.BillingCity &amp; &quot;, &quot; &amp;
ManagementCompanyName__r.BillingState &amp; &quot; &quot; &amp;
ManagementCompanyName__r.BillingPostalCode &amp; BR() &amp;
ManagementCompanyName__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>管理会社住所</label>
    <type>Text</type>
</CustomField>