force-app/main/default/objects/GarageCertification__c/fields/ManagementCompanyContactDestination__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyContactDestination__c</fullName>
    <formula>ManagementCompanyName__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>管理会社連絡先</label>
    <type>Text</type>
</CustomField>