force-app/main/default/objects/GarageCertification__c/fields/ManagementCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>管理会社・貸主様名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>車庫証明</relationshipLabel>
    <relationshipName>ManagementCompanyNamewdU6</relationshipName>
    <type>Lookup</type>
</CustomField>