force-app/main/default/objects/GarageCertification__c/fields/ManagementCompanyZipCode__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyZipCode__c</fullName>
    <formula>ManagementCompanyName__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>管理会社郵便番号</label>
    <type>Text</type>
</CustomField>