force-app/main/default/objects/GarageCertification__c/fields/MatterSpecificConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>MatterSpecificConfirmDate__c</fullName>
    <label>案件特定確認日</label>
    <type>Date</type>
</CustomField>