force-app/main/default/objects/GarageCertification__c/fields/NewContractExistingContract__c.field-meta.xml
<CustomField>
    <fullName>NewContractExistingContract__c</fullName>
    <label>新規契約/既存契約</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規契約</fullName>
            </value>
            <value>
                <fullName>既存契約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>