force-app/main/default/objects/GarageCertification__c/fields/NewRequestDate__c.field-meta.xml
<CustomField>
    <fullName>NewRequestDate__c</fullName>
    <label>新規へ依頼日</label>
    <type>Date</type>
</CustomField>