force-app/main/default/objects/GarageCertification__c/fields/NextMonthPaymentParkingFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>NextMonthPaymentParkingFeeTaxCategory__c</fullName>
    <label>翌月支払駐車場代税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>