force-app/main/default/objects/GarageCertification__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>備考_アボット</label>
    <type>TextArea</type>
</CustomField>