force-app/main/default/objects/GarageCertification__c/fields/Num__c.field-meta.xml
<CustomField>
    <fullName>Num__c</fullName>
    <label>No_アボット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>