force-app/main/default/objects/GarageCertification__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>案件重要事項</label>
    <type>TextArea</type>
</CustomField>