force-app/main/default/objects/GarageCertification__c/fields/Payment1BankAccount__c.field-meta.xml
<CustomField>
    <fullName>Payment1BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払1_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>車庫証明</relationshipLabel>
    <relationshipName>GarageCertificationPayment1Account</relationshipName>
    <type>Lookup</type>
</CustomField>