force-app/main/default/objects/GarageCertification__c/fields/Payment1TransferContractor__c.field-meta.xml
<CustomField>
    <fullName>Payment1TransferContractor__c</fullName>
    <label>支払1_振込名義（変更必要な場合は登録）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>