force-app/main/default/objects/GarageCertification__c/fields/Payment2Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment2Amount__c</fullName>
    <label>支払2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>