force-app/main/default/objects/GarageCertification__c/fields/Payment2BankAccount__c.field-meta.xml
<CustomField>
    <fullName>Payment2BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払2_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>車庫証明 (支払2_口座)</relationshipLabel>
    <relationshipName>GarageCertificationPayment2Account</relationshipName>
    <type>Lookup</type>
</CustomField>