force-app/main/default/objects/GarageCertification__c/fields/PrepaymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentEndDate__c</fullName>
    <inlineHelpText>前納金がある場合は終了年月日を入力してください</inlineHelpText>
    <label>前納終了年月日</label>
    <type>Date</type>
</CustomField>