force-app/main/default/objects/GarageCertification__c/fields/PrepaymentTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentTotalAmount__c</fullName>
    <formula>NextMonthPaymentParkingFee__c  *  AfterNextMonthPrepaymentTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>翌月以降前納合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>