force-app/main/default/objects/GarageCertification__c/fields/Reapplication1CorporateHousingDContact__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CorporateHousingDContact__c</fullName>
    <label>再申請①【社内】社宅D連絡日</label>
    <type>Date</type>
</CustomField>