force-app/main/default/objects/GarageCertification__c/fields/Reapplication1EmployeeUnderstandDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1EmployeeUnderstandDate__c</fullName>
    <label>再申請①社員了承日</label>
    <type>Date</type>
</CustomField>