force-app/main/default/objects/GarageCertification__c/fields/Reapplication2CorporateHousingDContact__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorporateHousingDContact__c</fullName>
    <label>再申請②【社内】社宅D連絡日</label>
    <type>Date</type>
</CustomField>