force-app/main/default/objects/GarageCertification__c/fields/Reapplication2FinanceAcceptDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2FinanceAcceptDate__c</fullName>
    <label>再申請②【社内】経理了承日</label>
    <type>Date</type>
</CustomField>