force-app/main/default/objects/GarageCertification__c/fields/Reapplication2ReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2ReconfirmDate__c</fullName>
    <label>再申請②再査日</label>
    <type>Date</type>
</CustomField>