force-app/main/default/objects/GarageCertification__c/fields/Reapplication3CorporateHousingDContact__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CorporateHousingDContact__c</fullName>
    <label>再申請③【社内】社宅D連絡日</label>
    <type>Date</type>
</CustomField>