force-app/main/default/objects/GarageCertification__c/fields/ReApplicationCHDSecondaryCheckDate__c.field-meta.xml
<CustomField>
    <fullName>ReApplicationCHDSecondaryCheckDate__c</fullName>
    <label>再申請_社宅D2次チェック日</label>
    <type>Date</type>
</CustomField>