force-app/main/default/objects/GarageCertification__c/fields/ReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmDate__c</fullName>
    <label>再査日</label>
    <type>Date</type>
</CustomField>