force-app/main/default/objects/GarageCertification__c/fields/ReconfirmRequestTeam__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmRequestTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>車庫証明 (再査担当チーム)</relationshipLabel>
    <relationshipName>GCgWvN</relationshipName>
    <type>Lookup</type>
</CustomField>