force-app/main/default/objects/GarageCertification__c/fields/ReminderStatus__c.field-meta.xml
<CustomField>
    <fullName>ReminderStatus__c</fullName>
    <label>督促状況</label>
    <type>TextArea</type>
</CustomField>