force-app/main/default/objects/GarageCertification__c/fields/RemittanceAmount__c.field-meta.xml
<CustomField>
    <fullName>RemittanceAmount__c</fullName>
    <label>送金金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>