force-app/main/default/objects/GarageCertification__c/fields/ReportListSendDate__c.field-meta.xml
<CustomField>
    <fullName>ReportListSendDate__c</fullName>
    <label>報告/リスト送付日</label>
    <type>Date</type>
</CustomField>