force-app/main/default/objects/GarageCertification__c/fields/ReReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ReReconfirmDate__c</fullName>
    <label>（再）再査日</label>
    <type>Date</type>
</CustomField>