force-app/main/default/objects/GarageCertification__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入居者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>車庫証明 (入居者)</relationshipLabel>
    <relationshipName>GarageCertificationResident</relationshipName>
    <type>Lookup</type>
</CustomField>