force-app/main/default/objects/GarageCertification__c/fields/RoomNum__c.field-meta.xml
<CustomField>
    <fullName>RoomNum__c</fullName>
    <formula>RealEstate__r.RoomNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部屋番号</label>
    <type>Text</type>
</CustomField>