force-app/main/default/objects/GarageCertification__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付中</fullName>
            </value>
            <value>
                <fullName>内容確認中</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>対応中（精算等）</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>再査中</fullName>
                <isActive>false</isActive>
                <label>再査中</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>