force-app/main/default/objects/GarageCertification__c/fields/TargetNot__c.field-meta.xml
<CustomField>
    <fullName>TargetNot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対象なし</label>
    <type>Checkbox</type>
</CustomField>