force-app/main/default/objects/GarageCertification__c/fields/TargetNotComment__c.field-meta.xml
<CustomField>
    <fullName>TargetNotComment__c</fullName>
    <label>対象なしコメント</label>
    <type>TextArea</type>
</CustomField>