force-app/main/default/objects/GarageCertification__c/fields/ToCarManagementNotice__c.field-meta.xml
<CustomField>
    <fullName>ToCarManagementNotice__c</fullName>
    <label>社宅サービス⇒車両管理デスク連絡事項</label>
    <type>TextArea</type>
</CustomField>