force-app/main/default/objects/GarageCertification__c/fields/UserContractor__c.field-meta.xml
<CustomField>
    <fullName>UserContractor__c</fullName>
    <label>使用者名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>