force-app/main/default/objects/GarageCertification__c/fields/WhereDecisionApplicate__c.field-meta.xml
<CustomField>
    <fullName>WhereDecisionApplicate__c</fullName>
    <label>決裁申請方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車庫証明</fullName>
            </value>
            <value>
                <fullName>新規</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>