force-app/main/default/objects/GarageCertification__c/fields/WrittenEstimateReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>WrittenEstimateReceiptDate__c</fullName>
    <label>見積書受領日</label>
    <type>Date</type>
</CustomField>