force-app/main/default/objects/GarageCertification__c/validationRules/HalfKatakana_Payment2TransferName.validationRule-meta.xml
<ValidationRule>
    <fullName>HalfKatakana_Payment2TransferName</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ISBLANK (  Payment2TransferContractor__c  ), FALSE, NOT ( REGEX ( Payment2TransferContractor__c  , &quot;^[ｦ-ﾟ]*$&quot; ) ) )</errorConditionFormula>
    <errorDisplayField>Payment2TransferContractor__c</errorDisplayField>
    <errorMessage>半角カタカナで入力してください</errorMessage>
</ValidationRule>