force-app/main/default/objects/GarageCertification__c/validationRules/NumAlphabet_ArrivalMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>NumAlphabet_ArrivalMonth</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(ArrivalMonth__c)),NOT( REGEX( ArrivalMonth__c , &quot;^[0-9a-zA-Z]+$&quot;)))</errorConditionFormula>
    <errorDisplayField>ArrivalMonth__c</errorDisplayField>
    <errorMessage>半角英数字で入力してください</errorMessage>
</ValidationRule>