force-app/main/default/objects/GarageCertification__c/validationRules/NumAlphabet_CompletedMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>NumAlphabet_CompletedMonth</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(CompletedMonth__c)),NOT( REGEX( CompletedMonth__c , &quot;^[0-9a-zA-Z]+$&quot;)))</errorConditionFormula>
    <errorDisplayField>CompletedMonth__c</errorDisplayField>
    <errorMessage>半角英数字で入力してください</errorMessage>
</ValidationRule>