force-app/main/default/objects/GarageCertification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>NewMatter__c</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>DocumentIssueDueDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>