force-app/main/default/objects/GarageCertification__c/listViews/GarageCertificationReconfirmStaffProgression.listView-meta.xml
<ListView>
    <fullName>GarageCertificationReconfirmStaffProgression</fullName>
    <booleanFilter>1 AND 2 AND (3 AND (4 AND 5))</booleanFilter>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>ReconfirmRequestDate__c</columns>
    <columns>ReconfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReconfirmRequestStaff__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>DecisionAcquisitionDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>再査担当リストビュー(進行中)</label>
</ListView>