force-app/main/default/objects/GarageCertification__c/listViews/ProgressGarageCertificationRealEstate.listView-meta.xml
<ListView>
    <fullName>ProgressGarageCertificationRealEstate</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <filterScope>Everything</filterScope>
    <label>自社物件の車庫証明(不動産)</label>
</ListView>